# ADTOR-LabAutoation-GroupG

./: .gitignore  README.md  platformio.ini  pyproject.toml  requirements.txt
API/: action_models.py  driver.py  find_port.py  main.py  temp_main.py
API/OurPump/: find_port.py
API/OurPump/api-requests/: Multiple pumps simple.bru  Simple action copy.bru  Simple action.bru
API/SimplePump/: action_models.py  main.py
API/SimplePump/api-requests/: collection.bru  untitled-request.bru
API/SimplePumpBackground/: find_port.py  main.py  requirements.txt
BayesianOpt/: bayesianOpt.py  customCallbacks.py  evaluateFitness.py
Electronics/Firmware/CommandExample/src/: driver.py  main.cpp
Electronics/Firmware/OurPump/: platformio.ini
Electronics/Firmware/PumpExample/src/: main.cpp
Electronics/Firmware/StepExample/src/: driver.py  main.cpp
OurPump/API/: driver.py  main.py
OurPump/pump-requests/: bruno.json  collection.bru  untitled-request.bru
OurPump/src/: main.cpp
examples/: sensor.123
requests/: Get Sensor Readings.bru  Run Pump A.bru  Run all Pumps.bru  bruno.json  fmain.py
requests/api-requests/: Get Sensor Readings.bru  Multiple pumps simple.bru  Simple action.bru
requests/pump-requests/: multi-pump-simple.bru  untitled-request.bru
scripts/: bayesianOpt.py  color.py  evaluateFitness.py  main.py  pump.py  syringe.py  tracker.py
src/: main.cpp
